logs/curlwrapper.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/curlwrapper'...
Compiling './lib/python3.5/site-packages/curlwrapper/basebrowser.py'...
***   File "./lib/python3.5/site-packages/curlwrapper/basebrowser.py", line 213
    print response.status_code, response.response
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/curlwrapper/browser.py'...
***   File "./lib/python3.5/site-packages/curlwrapper/browser.py", line 11
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/curlwrapper/test'...
Compiling './lib/python3.5/site-packages/curlwrapper/test/test_all.py'...
***   File "./lib/python3.5/site-packages/curlwrapper/test/test_all.py", line 13
    print "Running for class", self.__class__
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/curlwrapper/test/test_native.py'...
***   File "./lib/python3.5/site-packages/curlwrapper/test/test_native.py", line 51
    print "worked"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/curlwrapper-0.1.110.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
